添加业务层基本代码，修改系统标题

--- a/ssms/src/main/resources/templates/layout/header.html
+++ b/ssms/src/main/resources/templates/layout/header.html
@@ -3,7 +3,7 @@
 
     <div class="layui-logo">
         <img src="assets/images/logo.png"/>
-        <cite>&nbsp;分析型成绩管理系统&emsp;</cite>
+        <cite>&nbsp;学生成绩管理系统&emsp;</cite>
     </div>
 
     <ul class="layui-nav layui-layout-left">
