--- a/ssms/src/main/resources/templates/login.html
+++ b/ssms/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 <div class="login-wrapper">
 
     <div class="login-header">
-        <img src="assets/images/logo.png">分析型成绩管理系统
+        <img src="assets/images/logo.png">SSMS 分析型成绩管理系统
     </div>
 
     <div class=" login-body">
@@ -29,7 +29,7 @@
             <form class="layui-card-body layui-form layui-form-pane">
                 <div class="layui-form-item">
                     <label class="layui-form-label"><i class="layui-icon layui-icon-username"></i></label>
-                    <div class="layui-input-block">
+                    <div class="layui-input-block">input
                         <input name="username" type="text" lay-verify="required" placeholder="账号"
                                class="layui-input">
                     </div>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="login-footer">
-        <p>北京人大金仓信息技术股份有限公司 版权所有 &copy; 2018</a></p>
+        <p>河北北方学院 版权所有 &copy; 2019</a></p>
     </div>
 </div>
 
