开发成绩信息模块界面搭建，实现学院专业开发
    1.完成成绩管理界面基本实现
    2.完成班级成绩界面基本实现
    3.完成学院专业班级管理功能
    4.添加ResponseResult结果工具类
    5.平台版本修改

--- a/ssms/src/main/resources/templates/layout/footer.html
+++ b/ssms/src/main/resources/templates/layout/footer.html
@@ -1,6 +1,6 @@
 <!-- 底部 -->
 <div class="layui-footer ">
-    分析型成绩管理系统<span class="pull-right">版本：@@VERSION@@</span>
+    SSMS 分析型成绩管理系统<span class="pull-right">版本：@@1.0.0@@</span>
 </div>
 
 <!-- 手机屏幕遮罩层 -->
