--- a/ssms/src/main/resources/templates/login.html
+++ b/ssms/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
             <form class="layui-card-body layui-form layui-form-pane">
                 <div class="layui-form-item">
                     <label class="layui-form-label"><i class="layui-icon layui-icon-username"></i></label>
-                    <div class="layui-input-block">input
+                    <div class="layui-input-block">
                         <input name="username" type="text" lay-verify="required" placeholder="账号"
                                class="layui-input">
                     </div>
