--- a/ssms/src/main/resources/templates/score/classScore.html
+++ b/ssms/src/main/resources/templates/score/classScore.html
@@ -44,6 +44,11 @@
                         </select>
                     </div>
                     <div class="layui-inline" style="padding-left: 20px;">
+                        <select id="schoolYearId" name="schoolYearId" lay-filter="schoolYearId">
+                            <option value="">请选择学年</option>
+                        </select>
+                    </div>
+                    <div class="layui-inline" style="padding-left: 20px;">
                         <select id="semester" name="semester" lay-filter="semester">
                             <option value="">请选择学期</option>
                             <option value="1">上学期</option>
@@ -104,6 +109,7 @@
                 {field: 'collegeId', hide: true},
                 {field: 'subjectId', hide: true},
                 {field: 'classId', hide: true},
+                {field: 'studentId', hide: true},
                 {field: 'index', align: 'center', sort: true, title: '排名'},
                 {field: 'username', align: 'center', sort: true, title: '学号'},
                 {field: 'nickName', align: 'center', sort: true, title: '姓名'},
@@ -122,6 +128,7 @@
                 }
             ]],
             skin: 'line',
+            even:true,
             size: 'lg',
             response: {
                 statusCode: 200
@@ -180,7 +187,15 @@
         //加载学院下拉框
         collegeSelect.renderCollegeList();
 
-        //选择学院触发时间
+        //选择年级触发事件
+        form.on('select(gradeId)', function (data) {
+            collegeSelect.renderSchoolYearList(data.text);
+            form.render('select');
+            if ($("#schoolYearId option:selected").val() != "") {
+                //TODO 查询学生信息
+            }
+        });
+        //选择学院触发事件
         form.on('select(collegeId)', function (data) {
             collegeSelect.renderSubjectList(data.value);
             form.render('select');
