实现下拉框动态加载
    1.将通用类放置到common目录中
    2.成绩模块下拉框动态加载
    3.添加年级管理模块菜单

--- a/ssms/src/main/resources/templates/layout/footer.html
+++ b/ssms/src/main/resources/templates/layout/footer.html
@@ -1,6 +1,6 @@
 <!-- 底部 -->
 <div class="layui-footer ">
-    SSMS 分析型成绩管理系统<span class="pull-right">版本：@@1.0.0@@</span>
+    SSMS 分析型成绩管理系统<span class="pull-right">版本：<i class="layui-icon layui-icon-rate-solid" style="color: #FFCE2B;"></i> 1.0.0 <i class="layui-icon layui-icon-rate-solid" style="color: #FFCE2B;"></i> </span>
 </div>
 
 <!-- 手机屏幕遮罩层 -->
