--- a/ssms/src/main/resources/templates/score/classScore.html
+++ b/ssms/src/main/resources/templates/score/classScore.html
@@ -24,11 +24,6 @@
             <div class="layui-form toolbar">
                 <div class="layui-form-item">
                     <div class="layui-inline" style="padding-left: 20px;">
-                        <select id="gradeId" name="gradeId" lay-filter="gradeId">
-                            <option value="">请选择年级</option>
-                        </select>
-                    </div>
-                    <div class="layui-inline" style="padding-left: 20px;">
                         <select id="collegeId" name="collegeId" lay-filter="collegeId">
                             <option value="">请选择学院</option>
                         </select>
@@ -38,14 +33,19 @@
                             <option value="">请选择专业</option>
                         </select>
                     </div>
-                </div>
-                <div class="layui-form-item">
                     <div id="classDiv" class="layui-inline" style="padding-left: 20px;display:none;">
                         <select id="classId" name="classId" lay-filter="classId">
                             <option value="">请选择班级</option>
                         </select>
                     </div>
-                    <div id="schoolYearDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                </div>
+                <div class="layui-form-item">
+                    <div id="gradeDiv" class="layui-inline" style="padding-left: 20px;display:none">
+                        <select id="gradeId" name="gradeId" lay-filter="gradeId">
+                            <option value="">请选择年级</option>
+                        </select>
+                    </div>
+                    <div id="schoolYearDiv" class="layui-inline" style="padding-left: 20px;display:none">
                         <select id="schoolYearId" name="schoolYearId" lay-filter="schoolYearId">
                             <option value="">请选择学年</option>
                         </select>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <div class="layui-inline" style="width: 120px;">
+                    <div class="layui-inline" style="padding-left: 20px;width: 120px;">
                         <select id="sltKey">
                             <option value="">-搜索条件-</option>
                             <option value="username">学号</option>
@@ -115,19 +115,19 @@
                 {field: 'totalScore', align: 'center', sort: true, title: '总成绩'},
                 {field: 'schoolYear', align: 'center', sort: true, title: '学年'},
                 {
-                    align: 'center', sort: true,templet:function (d) {
-                        if(d.semester==1){
+                    align: 'center', sort: true, templet: function (d) {
+                        if (d.semester == 1) {
                             return '上学期';
-                        }else if(d.semester==2){
+                        } else if (d.semester == 2) {
                             return '下学期';
-                        }else {
+                        } else {
                             return '未知';
                         }
-                    },title: '学期'
+                    }, title: '学期'
                 }
             ]],
             skin: 'line',
-            even:true,
+            even: true,
             size: 'lg',
             response: {
                 statusCode: 200
@@ -150,15 +150,15 @@
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值
 
-           if (layEvent === 'edit') {
+            if (layEvent === 'edit') {
                 //渲染下拉框，学院、专业、班级下拉框
-               collegeSelect.renderCollegeList();
-               collegeSelect.renderSubjectList(data.collegeId);
-               collegeSelect.renderClassList(data.classId);
+                collegeSelect.renderCollegeList();
+                collegeSelect.renderSubjectList(data.collegeId);
+                collegeSelect.renderClassList(data.classId);
                 //回显数据
-               collegeSelect.selectCollege(data);
-               collegeSelect.selectSubject(data);
-               collegeSelect.selectClass(data);
+                collegeSelect.selectCollege(data);
+                collegeSelect.selectSubject(data);
+                collegeSelect.selectClass(data);
                 //展示数据
                 showEditModel(data);
             } else if (layEvent === 'del') {
@@ -181,30 +181,17 @@
             }
         });
 
-        //加载年级下拉框
-        collegeSelect.renderGradeList();
         //加载学院下拉框
         collegeSelect.renderCollegeList();
 
-        //选择年级触发事件
-        form.on('select(gradeId)', function (data) {
-            var optionText = data.text;
-            if(optionText != ''){
-                form.render('select');
-                if ($("#schoolYearId option:selected").val() != "") {
-                    //TODO 查询学生信息
-                }
-            }
-        });
         //选择学院触发事件
         form.on('select(collegeId)', function (data) {
             if ($("#collegeId option:selected").val() != "") {
                 $('#subjectDiv').show();
                 collegeSelect.renderSubjectList(data.value);
                 form.render('select');
-                //TODO 查询学生信息
-
-            }else {
+                searchScoreList();
+            } else {
                 $('#subjectDiv').hide();
                 $('#classDiv').hide();
                 $('#schoolYearDiv').hide();
@@ -217,8 +204,8 @@
                 collegeSelect.renderClassList(data.value);
                 form.render('select');
                 $('#classDiv').show();
-                //TODO 查询学生信息
-            }else {
+                searchScoreList();
+            } else {
                 $('#classDiv').hide();
                 $('#schoolYearDiv').hide();
                 $('#semesterDiv').hide();
@@ -226,15 +213,29 @@
         });
         //选择班级触发事件
         form.on('select(classId)', function (data) {
-            if ($("#classId option:selected").val() != "") {
+            if (data.value != "") {
+                //加载年级下拉框
+                collegeSelect.renderGradeList();
+                $('#gradeDiv').show();
+                searchScoreList();
+            }
+            else {
+                $('#gradeDiv').hide();
+                $('#schoolYearDiv').hide();
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择年级触发事件
+        form.on('select(gradeId)', function (data) {
+            if (data.value != "") {
                 var gradeName = $("#gradeId option:selected").text();
-                if(gradeName != ""){
+                if (gradeName != "" && gradeName != undefined) {
                     collegeSelect.renderSchoolYearList(gradeName);
-                    form.render('select')
                     $('#schoolYearDiv').show();
-                    //TODO 查询学生信息
+                    form.render('select')
+                    searchScoreList();
                 }
-            }else {
+            } else {
                 $('#schoolYearDiv').hide();
                 $('#semesterDiv').hide();
             }
@@ -243,15 +244,15 @@
         form.on('select(schoolYearId)', function (data) {
             if ($("#schoolYearId option:selected").val() != "") {
                 $('#semesterDiv').show();
-                //TODO 查询学生信息
-            }else {
+                searchScoreList();
+            } else {
                 $('#semesterDiv').hide();
             }
         });
         //选择学期触发事件
         form.on('select(semesterId)', function (data) {
             if ($("#semesterId option:selected").val() != "") {
-                //TODO 查询学生信息
+                searchScoreList();
             }
         });
 
@@ -259,15 +260,44 @@
         $('#btnSearch').click(function () {
             var key = $('#sltKey').val();
             var value = $('#edtSearch').val();
-            table.reload('score-table', {where: {searchKey: key, searchValue: value}});
+            if(key == 'username'){
+                if(/^[0-9]*$/.test(value)){
+                    searchScoreList();
+                }else {
+                    layer.msg("学号必须为数字", {icon: 2});
+                    $('#edtSearch').focus();
+                }
+            }
         });
+        //根据条件获取成绩列表
+        function searchScoreList() {
+            var collegeId = $('#collegeId option:selected').val();
+            var subjectId = $('#subjectId option:selected').val();
+            var classId = $('#classId option:selected').val();
+            var gradeId = $('#gradeId option:selected').val();
+            var schoolYearId = $('#schoolYearId option:selected').val();
+            var semesterId = $('#semesterId option:selected').val();
+            var key = $('#sltKey').val();
+            var value = $('#edtSearch').val();
+            table.reload('score-table', {
+                where: {
+                    collegeId:collegeId,
+                    subjectId:subjectId,
+                    classId:classId,
+                    gradeId:gradeId,
+                    schoolYear:schoolYearId,
+                    semester:semesterId,
+                    searchKey: key,
+                    searchValue: value
+                }
+            });
+        }
 
         // 选择数据源树取消按钮
         $('.closeDialog').click(function () {
             layer.close(index);
         });
     });
-
 </script>
 </body>
 </html>
