完善成绩管理界面删除功能

--- a/ssms/src/main/resources/templates/system/platformInfo.html
+++ b/ssms/src/main/resources/templates/system/platformInfo.html
@@ -13,6 +13,9 @@
 
 <body>
 
+<!-- 页面加载loading -->
+<% include("../layout/loading.html"){} %>
+
 <div class="layui-fluid">
 <div class="layui-row layui-col-space15">
     <div class="layui-col-xs6 layui-col-md3">
