--- a/ssms/src/main/resources/templates/score/classScore.html
+++ b/ssms/src/main/resources/templates/score/classScore.html
@@ -112,7 +112,7 @@
                 {field: 'index', align: 'center', sort: true, title: '排名'},
                 {field: 'username', align: 'center', sort: true, title: '学号'},
                 {field: 'nickName', align: 'center', sort: true, title: '姓名'},
-                {field: 'totalScore', align: 'center', sort: true, title: '总成绩'},
+                {field: 'subjectName', align: 'center', sort: true, title: '专业'},
                 {field: 'schoolYear', align: 'center', sort: true, title: '学年'},
                 {
                     align: 'center', sort: true, templet: function (d) {
@@ -124,7 +124,8 @@
                             return '未知';
                         }
                     }, title: '学期'
-                }
+                },
+                {field: 'totalScore', align: 'center', sort: true, title: '总成绩'}
             ]],
             skin: 'line',
             even: true,
@@ -183,6 +184,18 @@
 
         //加载学院下拉框
         collegeSelect.renderCollegeList();
+
+        //学生登录回显
+        // var collegeInfo = '${collegeInfo!}';
+        // if (collegeInfo != '') {
+        //     var gradeId = collegeInfo.gradeId;
+        //     var collegeId = collegeInfo.collegeId;
+        //     var subjectId = collegeInfo.subjectId;
+        //     var classId = collegeInfo.classId;
+        //     console.info(collegeId);
+        //     form.val('collegeId',collegeId);
+        //     form.render('select');
+        // }
 
         //选择学院触发事件
         form.on('select(collegeId)', function (data) {
