--- a/ssms/src/main/resources/templates/score/scoreManage.html
+++ b/ssms/src/main/resources/templates/score/scoreManage.html
@@ -24,6 +24,57 @@
             <div class="layui-form toolbar">
                 <div class="layui-form-item">
                     <div class="layui-inline" style="padding-left: 20px;">
+                        <select id="collegeId" name="collegeId" lay-filter="collegeId">
+                            <option value="">请选择学院</option>
+                        </select>
+                    </div>
+                    <div id="subjectDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                        <select id="subjectId" name="subjectId" lay-filter="subjectId">
+                            <option value="">请选择专业</option>
+                        </select>
+                    </div>
+                    <div id="classDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                        <select id="classId" name="classId" lay-filter="classId">
+                            <option value="">请选择班级</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div id="gradeDiv" class="layui-inline" style="padding-left: 20px;display:none">
+                        <select id="gradeId" name="gradeId" lay-filter="gradeId">
+                            <option value="">请选择年级</option>
+                        </select>
+                    </div>
+                    <div id="schoolYearDiv" class="layui-inline" style="padding-left: 20px;display:none">
+                        <select id="schoolYearId" name="schoolYearId" lay-filter="schoolYearId">
+                            <option value="">请选择学年</option>
+                        </select>
+                    </div>
+                    <div id="semesterDiv" class="layui-inline" style="padding-left: 20px;display:none;">
+                        <select id="semesterId" name="semesterId" lay-filter="semesterId">
+                            <option value="">请选择学期</option>
+                            <option value="1">上学期</option>
+                            <option value="2">下学期</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-inline" style="padding-left: 20px;width: 120px;">
+                        <select id="sltKey">
+                            <option value="">-搜索条件-</option>
+                            <option value="username">学号</option>
+                            <option value="nick_name">姓名</option>
+                        </select>
+                    </div>
+                    <div class="layui-inline">
+                        <input id="edtSearch" class="layui-input" type="text" placeholder="输入关键字"/>
+                    </div>
+                    <div class="layui-inline">
+                        <button id="btnSearch" class="layui-btn icon-btn">
+                            <i class="layui-icon">&#xe615;</i>搜索
+                        </button>
+                    </div>
+                    <div class="layui-inline">
                         <button id="btnAdd" class="layui-btn icon-btn">
                             <i class="layui-icon">&#xe654;</i>新建
                         </button>
@@ -51,12 +102,11 @@
 <script type="text/javascript" src="/assets/js/common.js"></script>
 
 <script>
-    layui.use(['layer', 'form', 'table', 'util', 'laydate', 'admin','collegeSelect'], function () {
+    layui.use(['layer', 'form', 'table', 'laydate', 'admin','collegeSelect'], function () {
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
         var table = layui.table;
-        var util = layui.util;
         var laydate = layui.laydate;
         var admin = layui.admin;
         var collegeSelect = layui.collegeSelect;
@@ -79,6 +129,7 @@
                 {field: 'username', align: 'center', sort: true, title: '学号'},
                 {field: 'nickName', align: 'center', sort: true, title: '姓名'},
                 {field: 'totalScore', align: 'center', sort: true, title: '总成绩'},
+                {field: 'subjectName', align: 'center', sort: true, title: '专业'},
                 {field: 'schoolYear', align: 'center', sort: true, title: '学年'},
                 {
                     align: 'center', sort: true,templet:function (d) {
@@ -94,6 +145,7 @@
                 {field: 'operation', align: 'center', toolbar: '#score-table-bar', title: '操作'}
             ]],
             skin: 'line',
+            even: true,
             size: 'lg',
             response: {
                 statusCode: 200
@@ -132,7 +184,7 @@
                 layer.msg("操作成功", {icon: 1});
                 $.ajax({
                     type: 'delete',
-                    url: '/score/' + data.id,
+                    url: '/score/delete/' + data.id,
                     success: function (data) {
                         layer.closeAll('loading');
                         if (data.code == 200) {
@@ -146,6 +198,122 @@
                 });
             }
         });
+
+        //加载学院下拉框
+        collegeSelect.renderCollegeList();
+
+        //选择学院触发事件
+        form.on('select(collegeId)', function (data) {
+            if ($("#collegeId option:selected").val() != "") {
+                $('#subjectDiv').show();
+                collegeSelect.renderSubjectList(data.value);
+                form.render('select');
+                searchScoreList();
+            } else {
+                $('#subjectDiv').hide();
+                $('#classDiv').hide();
+                $('#schoolYearDiv').hide();
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择专业触发事件
+        form.on('select(subjectId)', function (data) {
+            if ($("#subjectId option:selected").val() != "") {
+                collegeSelect.renderClassList(data.value);
+                form.render('select');
+                $('#classDiv').show();
+                searchScoreList();
+            } else {
+                $('#classDiv').hide();
+                $('#schoolYearDiv').hide();
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择班级触发事件
+        form.on('select(classId)', function (data) {
+            if (data.value != "") {
+                //加载年级下拉框
+                collegeSelect.renderGradeList();
+                $('#gradeDiv').show();
+                searchScoreList();
+            } else {
+                $('#gradeDiv').hide();
+                $('#schoolYearDiv').hide();
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择年级触发事件
+        form.on('select(gradeId)', function (data) {
+            if (data.value != "") {
+                var gradeName = $("#gradeId option:selected").text();
+                if (gradeName != "" && gradeName != undefined) {
+                    collegeSelect.renderSchoolYearList(gradeName);
+                    $('#schoolYearDiv').show();
+                    form.render('select')
+                    searchScoreList();
+                }
+            } else {
+                $('#schoolYearDiv').hide();
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择学年触发事件
+        form.on('select(schoolYearId)', function (data) {
+            if ($("#schoolYearId option:selected").val() != "") {
+                $('#semesterDiv').show();
+                searchScoreList();
+            } else {
+                $('#semesterDiv').hide();
+            }
+        });
+        //选择学期触发事件
+        form.on('select(semesterId)', function (data) {
+            if ($("#semesterId option:selected").val() != "") {
+                searchScoreList();
+            }
+        });
+
+        // 搜索按钮点击事件
+        $('#btnSearch').click(function () {
+            var key = $('#sltKey').val();
+            var value = $('#edtSearch').val();
+            if (key != '' && value != '') {
+                if (key == 'username') {
+                    if (!/^[0-9]*$/.test(value)) {
+                        layer.msg("学号必须为数字", {icon: 2});
+                        $('#edtSearch').focus();
+                        return;
+                    }
+                }
+                searchScoreList();
+            }
+        });
+
+        //根据条件获取成绩列表
+        function searchScoreList() {
+            var collegeId = $('#collegeId option:selected').val();
+            var subjectId = $('#subjectId option:selected').val();
+            var classId = $('#classId option:selected').val();
+            var gradeId = $('#gradeId option:selected').val();
+            var schoolYearId = $('#schoolYearId option:selected').val();
+            var semesterId = $('#semesterId option:selected').val();
+            var key = $('#sltKey').val();
+            var value = $('#edtSearch').val();
+            table.reload('score-table', {
+                where: {
+                    collegeId: collegeId,
+                    subjectId: subjectId,
+                    classId: classId,
+                    gradeId: gradeId,
+                    schoolYear: schoolYearId,
+                    semester: semesterId,
+                    searchKey: key,
+                    searchValue: value
+                }
+            });
+        }
+
+
         // 添加学生成绩
         $('#btnAdd').click(function () {
             //显示弹窗
@@ -302,7 +470,7 @@
 
 </script>
 </body>
-<div id="scoreDiv" style="display: none;" lay-filter="scoreDiv">
+<!--<div id="scoreDiv" style="display: none;" lay-filter="scoreDiv">
     <form id="scoreForm" lay-filter="scoreForm" class="layui-form model-form">
         <input id="scoreId" name="id" type="hidden"/>
         <div class="layui-form-item">
@@ -375,5 +543,5 @@
             <button class="layui-btn" id="btnSubmit" lay-filter="btnSubmit" lay-submit>保存</button>
         </div>
     </form>
-</div>
+</div>-->
 </html>
