--- a/ssms/src/main/resources/templates/score/scoreManage.html
+++ b/ssms/src/main/resources/templates/score/scoreManage.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="layui-inline">
                         <button id="btnAdd" class="layui-btn icon-btn">
-                            <i class="layui-icon">&#xe654;</i>新建
+                            <i class="layui-icon">&#xe654;</i>添加
                         </button>
                         <button id="btnDelete" class="layui-btn icon-btn">
                             <i class="layui-icon">&#xe640;</i>删除
@@ -102,12 +102,11 @@
 <script type="text/javascript" src="/assets/js/common.js"></script>
 
 <script>
-    layui.use(['layer', 'form', 'table', 'laydate', 'admin','collegeSelect'], function () {
+    layui.use(['layer', 'form', 'table', 'admin','collegeSelect'], function () {
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
         var table = layui.table;
-        var laydate = layui.laydate;
         var admin = layui.admin;
         var collegeSelect = layui.collegeSelect;
 
@@ -178,7 +177,7 @@
                collegeSelect.selectSubject(data);
                collegeSelect.selectClass(data);
                 //展示数据
-                showEditModel(data);
+                //showEditModel(data);
             } else if (layEvent === 'del') {
                 table.reload('score-table');
                 layer.msg("操作成功", {icon: 1});
@@ -202,6 +201,16 @@
         //加载学院下拉框
         collegeSelect.renderCollegeList();
 
+        //教师登录回显
+        var collegeInfo = '${collegeInfo}';
+        if (collegeInfo != undefined && collegeInfo != '' && collegeInfo != '{}') {
+            var collegeId = '${collegeInfo.collegeId}';
+            var subjectId = '${collegeInfo.subjectId}';
+            var classId = '${collegeInfo.classId}';
+            var gradeId = '${collegeInfo.gradeId}';
+            collegeSelect.reshowAll(collegeId,subjectId,classId,gradeId);
+        }
+
         //选择学院触发事件
         form.on('select(collegeId)', function (data) {
             if ($("#collegeId option:selected").val() != "") {
@@ -211,11 +220,13 @@
                 searchScoreList();
             } else {
                 $('#subjectDiv').hide();
-                $('#classDiv').hide();
-                $('#schoolYearDiv').hide();
-                $('#semesterDiv').hide();
             }
+            $('#classDiv').hide();
+            $('#gradeDiv').hide();
+            $('#schoolYearDiv').hide();
+            $('#semesterDiv').hide();
         });
+
         //选择专业触发事件
         form.on('select(subjectId)', function (data) {
             if ($("#subjectId option:selected").val() != "") {
@@ -225,9 +236,10 @@
                 searchScoreList();
             } else {
                 $('#classDiv').hide();
-                $('#schoolYearDiv').hide();
-                $('#semesterDiv').hide();
             }
+            $('#gradeDiv').hide();
+            $('#schoolYearDiv').hide();
+            $('#semesterDiv').hide();
         });
         //选择班级触发事件
         form.on('select(classId)', function (data) {
@@ -238,9 +250,9 @@
                 searchScoreList();
             } else {
                 $('#gradeDiv').hide();
-                $('#schoolYearDiv').hide();
-                $('#semesterDiv').hide();
             }
+            $('#schoolYearDiv').hide();
+            $('#semesterDiv').hide();
         });
         //选择年级触发事件
         form.on('select(gradeId)', function (data) {
@@ -254,8 +266,8 @@
                 }
             } else {
                 $('#schoolYearDiv').hide();
-                $('#semesterDiv').hide();
             }
+            $('#semesterDiv').hide();
         });
         //选择学年触发事件
         form.on('select(schoolYearId)', function (data) {
@@ -316,11 +328,11 @@
 
         // 添加学生成绩
         $('#btnAdd').click(function () {
-            //显示弹窗
-            showEditModel();
-            // 渲染select
-            //渲染下拉框，学院、专业、班级下拉框
-            collegeSelect.renderCollegeList();
+            var url = "score/operateScore";
+            top.layui.index.loadView({
+                menuPath : url,
+                menuName : '添加学生成绩'
+            });
         });
 
         //选择学院触发时间
@@ -338,46 +350,46 @@
             }
         });
 
-        var type = 'post';
-        var index;
+        // var type = 'post';
+        // var index;
         // 显示表单弹窗
-        function showEditModel(data) {
-            var title = '成绩信息';
-            // 重置新建表单的信息
-            $('#scoreForm')[0].reset();
-            layui.form.render();
-            admin.putTempData('form_data', data);
-            admin.putTempData('formOk', false);
-            if (data) {
-                var score = admin.getTempData('form_data');
-                if (score) {
-                    var scoreId = data.id;
-                    type = 'put';
-                    form.val('scoreForm', score);
-                    $('#scoreId').val(scoreId);
-                    title = '编辑成绩信息'
-                }
-            } else {
-                $('#collegeId option:selected').attr("selected", false);
-                $('#subjectId option:selected').attr("selected", false);
-                $('#classId option:selected').attr("selected", false);
-            }
-            index = layer.open({
-                type: 1,
-                skin: 'layui-layer-molv',
-                title: title,
-                area: ['600px', '470px'],
-                content: $('#scoreDiv'),
-                end: function () {
-                    admin.getTempData('formOk') && table.reload('score-table'); // 成功刷新表格
-                }
-            });
-        }
-
-        // 选择数据源树取消按钮
-        $('.closeDialog').click(function () {
-            layer.close(index);
-        });
+        // function showEditModel(data) {
+        //     var title = '成绩信息';
+        //     // 重置添加表单的信息
+        //     $('#scoreForm')[0].reset();
+        //     layui.form.render();
+        //     admin.putTempData('form_data', data);
+        //     admin.putTempData('formOk', false);
+        //     if (data) {
+        //         var score = admin.getTempData('form_data');
+        //         if (score) {
+        //             var scoreId = data.id;
+        //             type = 'put';
+        //             form.val('scoreForm', score);
+        //             $('#scoreId').val(scoreId);
+        //             title = '编辑成绩信息'
+        //         }
+        //     } else {
+        //         $('#collegeId option:selected').attr("selected", false);
+        //         $('#subjectId option:selected').attr("selected", false);
+        //         $('#classId option:selected').attr("selected", false);
+        //     }
+        //     index = layer.open({
+        //         type: 1,
+        //         skin: 'layui-layer-molv',
+        //         title: title,
+        //         area: ['600px', '470px'],
+        //         content: $('#scoreDiv'),
+        //         end: function () {
+        //             admin.getTempData('formOk') && table.reload('score-table'); // 成功刷新表格
+        //         }
+        //     });
+        // }
+        //
+        // // 选择数据源树取消按钮
+        // $('.closeDialog').click(function () {
+        //     layer.close(index);
+        // });
         // 删除
         $('#btnDelete').click(function () {
             var checkRows = table.checkStatus('score-table');
@@ -418,54 +430,54 @@
             }
         });
         // 表单提交事件
-        form.on('submit(btnSubmit)', function (data) {
-            layer.load(2);
-
-            var field = data.field;
-            //获取表单信息
-            var scoreName = field.scoreName;
-            var id = field.id;
-            var tableName = field.tableName;
-
-            var param = JSON.stringify({
-                "id": id,
-                "scoreName": scoreName,
-                "sourceNodeName": $("#sourceNodeName option:selected").val(),
-                "tableName": tableName,
-            });
-            var url;
-            var method;
-            if (id != '' && id != null) {
-                url = '/score';
-                method = 'PUT';
-            } else {
-                url = '/score';
-                method = 'POST';
-            }
-            $.ajax({
-                url: url,
-                type: method,
-                data: param,
-                contentType: 'application/json;charset=UTF-8',
-                success: function (data) {
-                    layer.closeAll('loading');
-                    if (data.code == 200) {
-                        layer.msg('操作成功', {
-                            icon: 1
-                        });
-                    }
-                    if (data.code == 500) {
-                        layer.msg('操作失败', {
-                            icon: 2
-                        });
-                    }
-                    admin.putTempData('formOk', true); // 操作成功刷新表格
-                    // 关闭当前弹出层
-                    layer.close(index);
-                },
-            });
-            return false;
-        });
+        // form.on('submit(btnSubmit)', function (data) {
+        //     layer.load(2);
+        //
+        //     var field = data.field;
+        //     //获取表单信息
+        //     var scoreName = field.scoreName;
+        //     var id = field.id;
+        //     var tableName = field.tableName;
+        //
+        //     var param = JSON.stringify({
+        //         "id": id,
+        //         "scoreName": scoreName,
+        //         "sourceNodeName": $("#sourceNodeName option:selected").val(),
+        //         "tableName": tableName,
+        //     });
+        //     var url;
+        //     var method;
+        //     if (id != '' && id != null) {
+        //         url = '/score';
+        //         method = 'PUT';
+        //     } else {
+        //         url = '/score';
+        //         method = 'POST';
+        //     }
+        //     $.ajax({
+        //         url: url,
+        //         type: method,
+        //         data: param,
+        //         contentType: 'application/json;charset=UTF-8',
+        //         success: function (data) {
+        //             layer.closeAll('loading');
+        //             if (data.code == 200) {
+        //                 layer.msg('操作成功', {
+        //                     icon: 1
+        //                 });
+        //             }
+        //             if (data.code == 500) {
+        //                 layer.msg('操作失败', {
+        //                     icon: 2
+        //                 });
+        //             }
+        //             admin.putTempData('formOk', true); // 操作成功刷新表格
+        //             // 关闭当前弹出层
+        //             layer.close(index);
+        //         },
+        //     });
+        //     return false;
+        // });
     });
 
 </script>
@@ -488,53 +500,9 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">源端</label>
-            <div class="layui-inline">
-                <select id="sourceNodeId" name="sourceNodeId" lay-filter="sourceNodeId" lay-verify="required">
-                    <option value="">请选择源端主机</option>
-                </select>
-                <select id="sourceNodeName" name="sourceNodeName" lay-verify="required" lay-search lay-case lay-omit
-                        lay-tools>
-                    <option value="">请选择服务名</option>
-                </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">目标端</label>
-            <div class="layui-inline">
-                <select id="targetNodeId" name="targetNodeId" lay-filter="targetNodeId" lay-verify="required">
-                    <option value="">请选择目标端主机</option>
-                </select>
-                <select id="targetNodeName" name="targetNodeName" lay-verify="required" lay-search lay-case lay-omit
-                        lay-tools>
-                    <option value="">请选择服务名</option>
-                </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">表名</label>
-            <div class="layui-inline">
-                <input name="tableName" id="tableName" placeholder="请输入表名称" type="text"
-                       class="layui-input" maxlength="40" lay-verify="required" required/>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">立即执行</label>
-            <div class="layui-inline">
-                <input name="isNow" id="isNow" type="checkbox" checked lay-filter="isNow" onchange="fun()"
-                       class="layui-input"/>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">选择时间</label>
+            <label class="layui-form-label">描述</label>
             <div class="layui-input-block">
-                <input type="text" class="layui-input" id="executeDate" placeholder="请选择执行时间" disabled>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">调度描述</label>
-            <div class="layui-input-block">
-                <textarea name="description" id="description" placeholder="请输入任务描述"
+                <textarea name="description" id="description" placeholder="请输入描述"
                           class="layui-textarea"></textarea>
             </div>
         </div>
