--- a/ssms/src/main/resources/templates/score/personScore.html
+++ b/ssms/src/main/resources/templates/score/personScore.html
@@ -62,7 +62,7 @@
             method: 'GET',
             url: '/score/personScore',
             cols: [[
-                {align: 'center',type: 'numbers'},
+                {type: 'numbers', align: 'center'},
                 {field: 'scoreName', align: 'center', sort: true, title: '课程',fixed: 'left', totalRowText: '总成绩'},
                 {field: 'score', align: 'center', sort: true, title: '成绩',totalRow:true},
             ]],
