--- a/ssms/src/main/resources/templates/score/personScore.html
+++ b/ssms/src/main/resources/templates/score/personScore.html
@@ -63,8 +63,8 @@
             url: '/score/personScore',
             cols: [[
                 {type: 'numbers', align: 'center'},
-                {field: 'scoreName', align: 'center', sort: true, title: '课程',fixed: 'left', totalRowText: '总成绩'},
-                {field: 'score', align: 'center', sort: true, title: '成绩',totalRow:true},
+                {field: 'scoreName', align: 'center', sort: true, title: '课程',fixed: 'left',unresize:true, totalRowText: '总成绩'},
+                {field: 'score', align: 'center', sort: true, title: '成绩',totalRow:true,unresize:true},
             ]],
             skin: 'line',
             totalRow:true,
