--- a/ssms/src/main/resources/templates/system/user.html
+++ b/ssms/src/main/resources/templates/system/user.html
@@ -79,6 +79,7 @@
         var ins1 = table.render({
             elem: '#userTable',
             url: 'user/list',
+            title:'用户列表',
             page: true,
             cols: [[
                 {type: 'checkbox'},
